--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,6 +74,16 @@ jobs:
             echo "ECR_REGISTRY=${{ secrets.ECR_REGISTRY }}"
             echo "ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}"
 
+      - name: Debug Environment Variables
+        run: |
+            echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+            echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}"
+            echo "AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}"
+            echo "AWS_REGION=${{ secrets.AWS_REGION }}"
+            echo "ECR_REGISTRY=${{ secrets.ECR_REGISTRY }}"
+            echo "ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}"
+          
+
     #   - name: Push Docker image to ECR
     #     run: |
     #       docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
