--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,14 +92,14 @@ jobs:
             echo "AWS_REGION=${{ secrets.AWS_REGION }}"
             echo "ECR_REGISTRY=${{ secrets.ECR_REGISTRY }}"
             echo "ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}"
-    #   - name: Push Docker image to ECR
-    #     run: |
-    #       docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-    #       docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
-    #     env:
-    #         AWS_REGION: ${{ secrets.AWS_REGION }}
-    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-    #         ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-    #         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      - name: Push Docker image to ECR
+        run: |
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
+        env:
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+            ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+            ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
