--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,9 +123,13 @@ jobs:
           id: register-task
           run: |
             TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $ECS_TASK_DEFINITION)
-            NEW_TASK_DEF=$(echo "$TASK_DEFINITION" | jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPOSITORY:latest" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities)')
+            NEW_TASK_DEF=$(echo "$TASK_DEFINITION" | jq --arg IMAGE "$ECR_REGISTRY/$ECR_REPOSITORY:latest" \
+            '.taskDefinition | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy) | 
+            .containerDefinitions[0].image = $IMAGE')
+
             echo "$NEW_TASK_DEF" > new-task-def.json
             aws ecs register-task-definition --cli-input-json file://new-task-def.json
+
     
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
