--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -151,26 +151,37 @@ jobs:
             AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
             AWS_REGION: ${{ secrets.AWS_REGION }}
             EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-      - name: Deploy to Elastic Beanstalk
+
+      - name: Retrieve Elastic Beanstalk Logs
         run: |
-            aws elasticbeanstalk create-application-version \
-                --application-name $EB_APPLICATION_NAME \
-                --version-label $GITHUB_SHA \
-                --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=Dockerrun.aws.json \
-                --region $AWS_REGION
-  
-            aws elasticbeanstalk update-environment \
-                --environment-name $EB_ENV_NAME \
-                --version-label $GITHUB_SHA \
-                --region $AWS_REGION
+            aws elasticbeanstalk request-environment-info --environment-name $EB_ENV_NAME --info-type tail --region $AWS_REGION
+            aws elasticbeanstalk retrieve-environment-info --environment-name $EB_ENV_NAME --info-type tail --region $AWS_REGION
         env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_REGION: ${{ secrets.AWS_REGION }}
-            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}            
-  
+            AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
             EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-            EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
+    #   - name: Deploy to Elastic Beanstalk
+    #     run: |
+    #         aws elasticbeanstalk create-application-version \
+    #             --application-name $EB_APPLICATION_NAME \
+    #             --version-label $GITHUB_SHA \
+    #             --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=Dockerrun.aws.json \
+    #             --region $AWS_REGION
+  
+    #         aws elasticbeanstalk update-environment \
+    #             --environment-name $EB_ENV_NAME \
+    #             --version-label $GITHUB_SHA \
+    #             --region $AWS_REGION
+    #     env:
+    #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #         AWS_REGION: ${{ secrets.AWS_REGION }}
+    #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}            
+  
+    #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+    #         EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
     #   - name: Get retrive Elastic Beanstalk Logs
     #     run: |
     #         aws elasticbeanstalk request-environment-info --environment-name $EB_ENV_NAME --info-type tail --region $AWS_REGION            
