--- a/.github/workflows/de.yml
+++ b/.github/workflows/de.yml
@@ -106,7 +106,8 @@ jobs:
             },
             "Ports": [
               {
-                "ContainerPort": "5000"
+                "ContainerPort": "5000",
+                "HostPort": "80"
               }
             ]
           }' > Dockerrun.aws.json
