--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,11 @@ app.py_
 .github/workflows/de.yml_
 .github/workflows/tes.yml
 .github/workflows/coba.yml
+.github/workflows/*
+
+Dockerfile
+Dockerrun.aws.json
+
+modul2.yaml
 
 LICENSE
