--- a/.github/workflows/coba.yml
+++ b/.github/workflows/coba.yml
@@ -45,30 +45,30 @@ jobs:
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
           S3_KEY: "deployments/application-${{ github.sha }}.zip"
 
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: build-and-push
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Deploy to Elastic Beanstalk
-        run: |
-          aws elasticbeanstalk create-application-version \
-            --application-name ${{ secrets.EB_APPLICATION_NAME }} \
-            --version-label $GITHUB_SHA \
-            --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=$S3_KEY \
-            --region $AWS_REGION
+  #   steps:
+  #     - name: Deploy to Elastic Beanstalk
+  #       run: |
+  #         aws elasticbeanstalk create-application-version \
+  #           --application-name ${{ secrets.EB_APPLICATION_NAME }} \
+  #           --version-label $GITHUB_SHA \
+  #           --source-bundle S3Bucket=$S3_BUCKET_NAME,S3Key=$S3_KEY \
+  #           --region $AWS_REGION
 
-          aws elasticbeanstalk update-environment \
-            --environment-name ${{ secrets.EB_ENV_NAME }} \
-            --version-label $GITHUB_SHA
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+  #         aws elasticbeanstalk update-environment \
+  #           --environment-name ${{ secrets.EB_ENV_NAME }} \
+  #           --version-label $GITHUB_SHA
+  #       env:
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         AWS_REGION: ${{ secrets.AWS_REGION }}
+  #         AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
           
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-          S3_KEY: "deployments/application-${{ github.sha }}.zip"
+  #         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+  #         S3_KEY: "deployments/application-${{ github.sha }}.zip"
 
-          EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-          EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
+  #         EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+  #         EB_APP_NAME: ${{ secrets.EB_APPLICATION_NAME }}
